--- a/tasks/templates/tasks/base.html
+++ b/tasks/templates/tasks/base.html
@@ -40,7 +40,8 @@
 <body>
   <header>
     <div class="title">
-      <h1><a href="/">سایت برنامه ریزی</a></h1>
+      <h1><a href="/
+        ">سایت برنامه ریزی</a></h1>
     </div>
     <div>
       <a href="#">ورود</a> | <a href="#">ثبت نام</a>
