--- a/tasks/templates/tasks/base.html
+++ b/tasks/templates/tasks/base.html
@@ -50,9 +50,16 @@
       <h1><a href="/
         ">سایت برنامه ریزی</a></h1>
     </div>
+    {% if not user.is_authenticated %}
     <div>
-      <a href="#">ورود</a> | <a href="#">ثبت نام</a>
+      <a href="{% url "login" %}" >ورود</a> | <a href="{% url "signup" %}">ثبت نام</a>
     </div>
+    {% else %}
+    <div>
+      <a href="#">{{user.username}}</a> | <a href="{% url "logout" %}">خروج</a>
+    </div>
+    {% endif %}
+
   </header>
   <main>
     {% block main %}{% endblock %}
